--- a/src/containers/HeaderNav/HeaderNav.scss
+++ b/src/containers/HeaderNav/HeaderNav.scss
@@ -1,27 +1,29 @@
+@import '../../styles/shared.scss';
+
 .ui.menu.top-menu {
-  /* Remove Semantic IO's bottom border*/
-  border: none;
+    /* Remove Semantic IO's bottom border*/
+    border: none;
 
-  .logo {
-    width: 17rem;
-  }
-
-  .nav-container {
-    /* take available space in the flex container*/
-    flex-grow: 1;
-    padding: 0;
-
-    .search-input {
-      padding-left: 0;
-      width: 33%;
-
-      form {
-        width: 100%;
-      }
+    .logo {
+        width: 17rem;
     }
-  }
 
-  .header-icon {
-    color: #a0a0a0;
-  }
+    .nav-container {
+        /* take available space in the flex container*/
+        flex-grow: 1;
+        padding: 0;
+
+        .search-input {
+            padding-left: 0;
+            width: 33%;
+
+            form {
+                width: 100%;
+            }
+        }
+    }
+
+    .header-icon {
+        color: #a0a0a0;
+    }
 }
